assets/www/css/index.css
html{
    font-family: arial;
    margin: 0;
    padding: 0;
}

body{
    margin: 0;
    padding: 0;
}

form#app_settings input[name=hours],
form#app_settings input[name=minutes],
form#app_settings input[name=seconds]{
    display: inline;
    font-weight: bold;
    line-height: 2;
    text-align: center;
    width: 31%;
}

form#app_settings input.inline{
    display: inline;
    width: auto;
}

form#app_settings input[type=color]{
    display: inline-block;
    height: 50px;
    vertical-align: middle;
    width: 50px;
}

p#timer{
    background-color: black;
    display: none;
    margin-top: 0;
    padding: 0;
    position: absolute;
    text-align: center;
    text-shadow: none;
}

#page-menu{
    background-color: black;
}

#page-timer div[data-role=content]{
    padding: 0;
}

span.elapsed_remaining div.ui-slider-switch{
    line-height: 2;
    text-align: center;
    width: 99%;
}

table{
    margin: 0 auto;
}

table td{
    padding-bottom: 30px;
    text-align: center;
    width: 30%;
}

.ui-content .ui-btn-inner{
    /* font-size: 24px !important; */
}

/* SimpleColor style overrides */
div.simpleColorContainer input[type=button],
div.simpleColorContainer div.ui-btn{
    display: none !important;
}

div.simpleColorContainer div.simpleColorDisplay{
    height: 50px;
    line-height: 50px;
    margin: 0 auto;
}

div.simpleColorContainer div.simpleColorChooser{
    background-color: black;
    position: fixed;
    z-index: 100;
}

